<resources>
    <string name="app_name">RP HealthZone</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_details">Details</string>
    <string name="title_History">History</string>
    <string name="title_Goals">Goals</string>
    <string name="title_Graph">Graph</string>
    <string name="W">"Weight: "</string>
    <string name="H">"Height: "</string>
    <string name="EYTRB">Enter Your Test Results Below</string>
    <string name="M">Measurements</string>
    <string name="S">Submit</string>
    <string name="Goals">Your Goals</string>
    <string name="DTAB">"Date to Achieve By: "</string>
    <string name="date"><u>"Click here to set date"</u></string>

    <string-array name="Gender">
        <item>male</item>
        <item>female</item>
    </string-array>

    <string-array name="Position">
        <item>student</item>
        <item>facilitator</item>
    </string-array>
</resources>
