<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_Graph"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_Graph" />

    <item
        android:id="@+id/navigation_goals"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_Goals" />

    <item
        android:id="@+id/navigation_Details"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_details" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_History" />

</menu>
