<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="sg.edu.rp.c346.round3.HomeFragment.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/entry_fragment" />

    <fragment
        android:id="@+id/navigation_entry"
        android:name="sg.edu.rp.c346.round3.EntryFragment.EntryFragment"
        android:label="Entry" />

    <fragment
        android:id="@+id/navigation_Details"
        android:name="sg.edu.rp.c346.round3.DetailsFragment.DetailsFragment"
        android:label="@string/title_details"
        tools:layout="@layout/details_fragment" />

    <fragment
        android:id="@+id/navigation_goals"
        android:name="sg.edu.rp.c346.round3.GoalsFragment.GoalsFragment"
        android:label="@string/title_Goals"
        tools:layout="@layout/goals_fragment" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="sg.edu.rp.c346.round3.HistoryFragment.HistoryFragment"
        android:label="@string/title_History"
        tools:layout="@layout/history_fragment" />
</navigation>
