<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeFragment">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/M"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/H" />

        <EditText
            android:id="@+id/EditTextWeight"
            android:layout_width="125dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/et_custom"
            android:hint="Height"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textViewHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/W" />

        <EditText
            android:id="@+id/EditTextHeight"
            android:layout_width="125dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/et_custom"
            android:hint="Weight"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:textSize="15sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/EYTRB"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewBloodPressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="Blood \nPressure" />

        <EditText
            android:id="@+id/EditTextBloodPressure"
            android:layout_width="125dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/et_custom"
            android:hint="Blood Pressure"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textViewBMI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="17dp"
            android:text="BMI"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editTextBMI"
            android:layout_width="125dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/et_custom"
            android:hint="BMI"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewBodyFat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="Body Fat" />

        <EditText
            android:id="@+id/editTextBodyFat"
            android:layout_width="125dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/et_custom"
            android:hint="Body Fat"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textViewQuadPower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Quad \nPower" />

        <EditText
            android:id="@+id/editTextQuadPower"
            android:layout_width="125dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/et_custom"
            android:hint="Quad Power"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewRackPull"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="Rack Pull" />

        <EditText
            android:id="@+id/editTextRackPull"
            android:layout_width="125dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/et_custom"
            android:hint="Rack Pull"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textViewAgility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Agility" />

        <EditText
            android:id="@+id/editTextAgility"
            android:layout_width="125dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/et_custom"
            android:hint="Agility"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:textSize="15sp" />

    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/S" />

</LinearLayout>